plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.github.node-gradle.node' version '7.1.0'
}

group = 'com.ssafynity'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-h2console'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

        // WebSocket + STOMP
        implementation 'org.springframework.boot:spring-boot-starter-websocket'

        // Redis (Pub/Sub + Cache)
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        // QueryDSL (Jakarta EE 11 / Spring Boot 4 호환)
        implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
        annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
        annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.2.0'
        annotationProcessor 'jakarta.annotation:jakarta.annotation-api:3.0.0'

        // JWT
        implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
        runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
        runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// ── Node / React 빌드 통합 ──────────────────────────────────────────────────
node {
	version = '20.17.0'
	npmVersion = '10.8.2'
	download = true
	nodeProjectDir = file("${project.projectDir}/frontend")
}

task npmBuild(type: NpmTask) {
	dependsOn npmInstall
	args = ['run', 'build']
}

task copyFrontend(type: Copy) {
	dependsOn npmBuild
	from "${project.projectDir}/frontend/dist"
	into "${project.projectDir}/src/main/resources/static"
}

// 개발 시에는 의존성 제거 (npm run build 따로 실행), 프로덕션 빌드 시에만 활성화
// processResources.dependsOn copyFrontend

tasks.named('test') {
	useJUnitPlatform()
}
